--- a/sway/config
+++ b/sway/config
@@ -26,10 +26,10 @@ output eDP-1 resolution 1920x1080 position 0,0
 output HDMI-A-2 resolution 1920x1080 position 1920,0
 
 ### Idle configuration
-exec swayidle -w \
-      timeout 300 'swaylock -f -c 000000' \
-      timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-      before-sleep 'swaylock -f -c 000000'
+# exec swayidle -w \
+#       timeout 300 'swaylock -f -c 000000' \
+#       timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+#       before-sleep 'swaylock -f -c 000000'
 
 ### Input configuration
 input * {
