--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,7 @@
 ### Startup
 exec systemctl --user set-environment XDG_CURRENT_DESKTOP=sway
 exec systemctl --user import-environment WAYLAND_DISPLAY
+exec systemctl --user restart emacs
 exec mako
 
 ### Variables
@@ -122,6 +123,17 @@ input "1739:52581:MSFT0001:01_06CB:CD65_Touchpad" {
     bindsym $mod+s layout stacking
     bindsym $mod+w layout tabbed
     bindsym $mod+e layout toggle split
+
+    # toggle the bar
+    mode "bar" {
+         bindsym d bar mode dock
+         bindsym h bar mode hide
+         bindsym i bar mode invisible
+         bindsym o bar mode overlay
+         bindsym Escape mode "default"
+         bindsym Return mode "default"
+    }
+    bindsym $mod+Shift+b mode "bar"
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
