--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,11 @@
 # ----------------------------=== Options ===--------------------------
 
-set -g default-terminal "alacritty"
-set -g terminal-overrides "alacritty:Tc"
+set -g default-terminal "foot"
+set -g terminal-overrides "foot:Tc"
 set -g automatic-rename on
 set -g set-titles on
 set -g history-limit 50000
-set -g mouse on
+set -g mouse off
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
@@ -32,6 +32,33 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g status-left-length 100
+set -g status "on"
 set -g status-position "top"
+set -g status-style fg=yellow,bg=black
+
+set -g status-left-length 100
+set -g status-left "[#S] "
 set -g status-right ""
+
+# default window title colors
+set -g window-status-style fg=brightblue,bg=default
+
+# active window title colors
+set -g window-status-current-style fg=brightred,bg=default #orange and default
+
+# pane border
+set -g pane-border-style fg=black #base02
+set -g pane-active-border-style fg=brightgreen #base01
+
+# message text
+set -g message-style fg=brightred,bg=black #orange and base01
+
+# pane number display
+set -g display-panes-active-colour blue #blue
+set -g display-panes-colour brightred #orange
+
+# clock
+set -g clock-mode-colour green #green
+
+# bell
+set -g window-status-bell-style fg=black,bg=red #base02, red
