--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,31 +34,32 @@ bind l select-pane -R
 
 set -g status "on"
 set -g status-position "top"
-set -g status-style fg=yellow,bg=black
 
-set -g status-left-length 100
-set -g status-left "[#S] "
-set -g status-right ""
+# default statusbar colors
+set -g status-style "fg=#969896,bg=#e0e0e0"
 
 # default window title colors
-set -g window-status-style fg=brightblue,bg=default
+set -g window-status-style "fg=#969896,bg=default"
 
 # active window title colors
-set -g window-status-current-style fg=brightred,bg=default #orange and default
+set -g window-status-current-style "fg=#eab700,bg=default"
 
 # pane border
-set -g pane-border-style fg=black #base02
-set -g pane-active-border-style fg=brightgreen #base01
+set -g pane-border-style "fg=#e0e0e0"
+set -g pane-active-border-style "fg=#d6d6d6"
 
 # message text
-set -g message-style fg=brightred,bg=black #orange and base01
+set -g message-style "fg=#4d4d4c,bg=#e0e0e0"
 
 # pane number display
-set -g display-panes-active-colour blue #blue
-set -g display-panes-colour brightred #orange
+set -g display-panes-active-colour "#718c00"
+set -g display-panes-colour "#eab700"
 
 # clock
-set -g clock-mode-colour green #green
+set -g clock-mode-colour "#718c00"
+
+# copy mode highligh
+set -g mode-style "fg=#969896,bg=#d6d6d6"
 
 # bell
-set -g window-status-bell-style fg=black,bg=red #base02, red
+set -g window-status-bell-style "fg=#e0e0e0,bg=#c82829"
